--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.termux.widget"
+        applicationId "com.linuxdroid.widget"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 10
